--- a/_posts/2011-04-03-virgin-america-instagram-competition.textile
+++ b/_posts/2011-04-03-virgin-america-instagram-competition.textile
@@ -5,6 +5,7 @@ filename: 2011-04-03-virgin-america-instagram-competition.textile
 author: Ash Fontana
 author-image: ash-fontana.jpg
 author-link: http://www.linkedin.com/in/ashfontana
+summary-only: yes
 summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 ---
 
