Updated README to include contribution instructions

--- a/README
+++ b/README
@@ -1,1 +1,16 @@
-This will be the repository for the Topguest company blog
+Topguest company blog
+=====================
+
+This is the repository for [Topguest's company blog](http://blog.topguest.com). You can see a fully versioned history of our blog posts, or fork this repository to add your own!
+
+Why do this?
+------------
+Publishing our blog from a git repository (using [github pages](http://pages.github.com) with [jekyll](http://github.com/mojombo/jekyll/)) allows anybody on the team to easily contribute blog posts using our day-to-day tools: simple text editors and git. It also means that our content is backed up thoroughly and that pages are served lightning fast. Finally, we think it would be totally RAD to accept pull requests from guest contributors.
+
+Should I contribute?
+--------------------
+If you're hacking around with location-based services or thinking about how the travel industry could best use social media, you should consider writing a guest post. We'd love for you to join the conversation, and hope that we can give your work some additional exposure. It would also be a great way to get our attention if you're looking to land a job at Topguest :)
+
+How do I contribute?
+--------------------
+Just fork the repository, add a post in the \_posts directory, and send us a pull request! You can write in textile, markdown or HTML, and add your personal information in the post's front matter (have a look at existing posts to see how this works, or read up on [jekyll usage](https://github.com/mojombo/jekyll/wiki/usage)). To see what your post will look like once published, install and run jekyll from the repository's root directory. If you have any problems with this, just [let us know](mailto:ozan@topguest.com) and we'd be happy to help you out.
