minor copy changes

--- a/_posts/2011-04-21-topguest-total-rewards-announcement.textile
+++ b/_posts/2011-04-21-topguest-total-rewards-announcement.textile
@@ -16,8 +16,8 @@ _Beginning today, visitors at Caesars Palace, Planet Hollywood Resort & Casino, 
 
 You can get 50 points each time you check-in or take a photo at a venue - bar, nightclub or restaurant - at any of the casinos above on Facebook, Foursquare, Twitter, Gowalla or Instagram. There is a maximum of 250 points per day.
 
-For the next two weeks, each check-in also goes into the draw to win a 500 point Bonus! So, check in everywhere you go to increase your chances.
+For the next two weeks, everyone who checks in could also win a 500 point Bonus! So, check in everywhere you go to increase your chances.
 
-This is a great step forward for Topguest. We continue to execute customized social loyalty programs with the best travel companies. The two largest gaming and lodging loyalty programs in the world - Total Rewards with 40+ million members and Priority Club with 50+ million members - are now utlizing the Topguest platform.
+This is a great step forward for Topguest. We continue to execute customized social loyalty programs with the best travel companies. The two largest gaming and lodging loyalty programs in the world - Total Rewards with 40+ million members and Priority Club with 50+ million members, respectively - are now utlizing the Topguest platform.
 
 Visit the "Total Rewards page":http://www.topguest.com/partners/totalrewards for more information and be sure to signup for Total Rewards on our "settings page":http://www.topguest.com/settings - there's a 500 point bonus just for signing up online!
