minor copy changes

--- a/_posts/2011-04-21-topguest-total-rewards-announcement.textile
+++ b/_posts/2011-04-21-topguest-total-rewards-announcement.textile
@@ -14,7 +14,7 @@ Today we are proud to announce our newest partnership with Total Rewards and Cae
 
 _Beginning today visitors at Caesars Palace, Planet Hollywood Resort & Casino, Paris Las Vegas, Rio All-Suite Hotel & Casino, Flamingo Las Vegas, O'Sheas Casino, Imperial Palace, Harrah's Las Vegas, and Bally's Las Vegas can receive Total Rewards® points simply by 'checking-in' on Facebook and other popular services._
 
-You can get 50 points each time you check-in or take a photo at a venue - bar, nightclub or restaurant - at any of the casinos above using Facebook, Foursquare, Twitter, Gowalla or Instagram. There is a maximum of 250 points per day.
+You can get 50 Total Rewards points each time you check-in or take a photo at a venue - bar, nightclub or restaurant - at any of the casinos above using Facebook, Foursquare, Twitter, Gowalla or Instagram. There is a maximum of 250 Total Rewards points per day.
 
 For the next two weeks, everyone who checks in can also win a 500 point Bonus! So, check in everywhere you go to increase your chances.
 
