removed stray line break

--- a/_posts/2011-05-03-topguest-is-hiring-a-salesperson.textile
+++ b/_posts/2011-05-03-topguest-is-hiring-a-salesperson.textile
@@ -39,8 +39,7 @@ _Topguest is seeking a first-rate Salesperson. This team member will work closel
 
 *Just a few of the perks on offer*
 
-* Beautiful offices in the heart of San-Francisco's SoMa district (remote work arrangements will be considered for 
-  exceptional candidates)
+* Beautiful offices in the heart of San-Francisco's SoMa district (remote work arrangements will be considered for exceptional candidates)
 * Catered lunch daily, ample snacks and beverages 24/7
 * Competitive compensation plus benefits
 * Curious, driven, friendly and smart teammates
