--- a/_posts/2011-05-17-topguest-and-best-western-rewards.textile
+++ b/_posts/2011-05-17-topguest-and-best-western-rewards.textile
@@ -1,15 +1,13 @@
 ---
 layout: post
-title: Topguest and Best Western Rewards
+title: Get more points from the biggest hotel family in the world: Our new integration with Best Western Rewards!
 author: Geoff Lewis
 author-image: geoff-lewis.jpg
 author-link: http://www.linkedin.com/pub/geoffrey-lewis/2/ba/49a
-summary: We're seeking a relentlessly resourceful salesperson. You have past sales experience in a startup environment, and are hungry to make your mark. 
+summary: At Topguest, we are obsessed with finding more ways to give you more points from more of the top rewards programs you love. That’s why we are pleased to announce our latest global integration with Best Western Rewards.
 ---
 
 h1. {{ page.title }}
-
-_Get more points from the biggest hotel family in the world: Our new integration with Best Western Rewards!_
 
 At Topguest, we are obsessed with finding more ways to give you more points from more of the top rewards programs you love.
 
@@ -18,9 +16,9 @@ That’s why we are pleased to announce our latest global integration with Best 
 Are you a Best Western Rewards member? Now, your social actions on any of your favorite social networks will get you more Best Western Rewards points: up to 50 bonus Best Western Rewards points per day!
 
 There are all sorts of ways to use Topguest to get more Best Western Rewards points:
-* Share a photo using your mobile phone from any Best Western hotel around the world with your friends
-* Send a tweet about any Best Western hotel to your Twitter followers
-* Share your location at a Best Western hotel with friends using your choice of Facebook, Foursquare, or Gowalla.
+-	Share a photo using your mobile phone from any Best Western hotel around the world with your friends
+-	Send a tweet about any Best Western hotel to your Twitter followers
+-	Share your location at a Best Western hotel with friends using your choice of Facebook, Foursquare, or Gowalla.
 
 To get started, simply become a member of Topguest, enter your Best Western Rewards number, and connect your social networks on the Get Points page. Once you do, we’ll tell you exactly how to start earning points!
 
