--- a/_posts/2011-05-17-topguest-and-best-western-rewards.textile
+++ b/_posts/2011-05-17-topguest-and-best-western-rewards.textile
@@ -17,7 +17,7 @@ Are you a Best Western Rewards member? Now, your social actions on any of your f
 
 There are all sorts of ways to use Topguest to get more Best Western Rewards points:
 * Share a photo using your mobile phone from any Best Western hotel around the world with your friends
-* Send a tweet about any Best Western hotel to your Twitter followers
+* Send a tweet geolocated at any Best Western hotel to your Twitter followers
 * Share your location at a Best Western hotel with friends using your choice of Facebook, Foursquare, or Gowalla.
 
 To get started, simply become a member of Topguest, enter your Best Western Rewards number, and connect your social networks on the Get Points page. Once you do, we’ll tell you exactly how to start earning points!
