minor copy changes

--- a/_posts/2011-05-24-the-future-of-loyalty.textile
+++ b/_posts/2011-05-24-the-future-of-loyalty.textile
@@ -37,6 +37,6 @@ Here’s the best part: you don’t have to do anything different. No strange ne
 
 We believe that these these special touches lead to “blood pumping” loyalty. And our early users seem to agree. But they’re only the beginning. The loyalty programs of the future will give you hyper-personalized rewards, in real time, based on your engagement, influence, and more. They’ll anticipate your needs and desires before you even share them, and be at the ready 24/7 with a helping hand. And most importantly, they won’t be invasive; they’ll engage back with you on your terms alone. At Topguest, our goal is to make _every_ large established loyalty program an Engagement-Smart loyalty program that delights, never frustrates.
 
-Lots of people are taking about Loyalty right now - It’s a “hot” space in tech circles.  But Topguest’s approach is unique, as is our potential for scale. Thanks to our fantastic partners, *Topguest is already available to a combined 170 million loyalty program members*, and growing fast. We’re off to a good start, and indeed, we’re just getting started.
+Lots of people are taking about Loyalty right now - it’s a “hot” space in tech circles.  But Topguest’s approach is unique, as is our potential for scale. Thanks to our fantastic partners, *Topguest is already available to a combined 170 million loyalty program members*, and growing fast. We’re off to a good start, and indeed, we’re just getting started.
 
 Thanks so much for your early support. As always, we welcome your feedback. Please email me directly at "geoff@topguest.com":mailto:geoff@topguest.com
