--- a/_posts/2011-05-26-a-new-topguest.textile
+++ b/_posts/2011-05-26-a-new-topguest.textile
@@ -3,7 +3,7 @@ layout: post
 title: A new Topguest
 author: Nathan McGinness
 author-image: nathan-mcginness.jpg
-author-link: http://www.linkedin.com/pub/nathan-mcginness/3/b2a/800
+author-link: http://njmcgee.com
 summary: You might have noticed things changing at Topguest. A new design, some subtle but important changes to the application, and we’ve just launched the beginnings of a new mobile web experience. 
 ---
 
